@@ -1,12 +1,0 @@
-<?php
-
-class Players extends Application {
-    
-    
-        function __construct()
-	{
-		parent::__construct();
-        }
-        
-        
-}
