@@ -1,8 +1,11 @@
-<?php
-
-/* 
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
-
+<h1>{playername}</h1>
+<div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+        Pick Player..
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+        {playerlist} <!--List of players. Need to be wrapped in <li> tags-->
+    </ul>
+</div>
+<div>{playerdata}</div>
+        
