@@ -1,6 +1,6 @@
 /* CSS definition file containing site stylesheet */
 body {}
 #content {width:100%; margin-left:5% auto;margin-right:5% auto;}
-#PlyrPnl {background: #08c; font-style:italic; height: 500px}
+#PlyrPnl {background: #00ff00; font-style:italic; height: 500px}
 #StckPnl {background: #ebcccc; height: 500px}
 #footer {font-size: small; font-style:italic;text-align:center;}
